Sigil v0.2.4 ADD_DATE
    - fixed a bug where double-clicking a file in the Book Browser for a file that was already 
    opened in a tab switched that tab back to Book View; the tab now retains whatever View
    it was in previously
    - newly opened tabs now default to the View of the current tab (issue 468)
    - re-engineered the locations where Sigil stores its work files; the system-provided temp
    folder is now used; this should alleviate some permissions issues on certain machines
    (issue #404)
    - Sigil now prevents the renaming of files in the Book Browser to filesystem invalid names
    (issue #493)
    - changed the keyboard shortcut that opens the Replace dialog from Cmd+H to Cmd+Shift+F
    on Macs only; Cmd+H is used by Mac OS X for window hiding (issue #477)
    - fixed an issue with Sigil using XHTML 1.0 for OPS doctypes, instead of XHTML 1.1
    (issue #503)
    - several files can now be marked as having the Text semantic type (issue #522)
    - fixed an issue with Direction: All in book wide searching skipping last XHTML file 
    (issue #520)
    - fixed an issue with the declared XML encoding not being picked up if it was wrapped
    in single quotes instead of the more standard double quotes
    - fixed an issue where the user could avoid the warning dialog for book-wide searching in
    Book View if he switched to this mode in Code View, and then switched back

Sigil v0.2.3 2010.06.22.
    - fixed an issue with the new data from one view sometimes not being saved in the final
    epub when switching to the other view
    - worked around a Qt focus issue causing current tab data to sometimes not be saved;
    this was uncovered by fixing the hang-on-save issue, which was caused by the same 
    underlying problem (issue #466)

Sigil v0.2.2 2010.06.20.
    - simplified the resource locking mechanism; should eliminate the hang-on-save issue
    - fixed a problem with BookView chapter splitting sometimes not being registered on save,