@@ -1,4 +1,6 @@
 Sigil v0.2.4 ADD_DATE
+    - changed Tidy to handle the common typing mistake of ending entities with a ':' instead
+    of a ';' (issue 535)
     - fixed a bug where double-clicking a file in the Book Browser for a file that was already 
     opened in a tab switched that tab back to Book View; the tab now retains whatever View
     it was in previously
